adjust code font size

--- a/custom.css
+++ b/custom.css
@@ -1,8 +1,6 @@
 /* You can add additional CSS rules in custom.css. */
 
-/* @import url('http://fonts.googleapis.com/css?family=Source+Code+Pro:wght@300;400;500;600;700wght@700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Vollkorn:400,600');
 
 .modulename {
     /* color: black; */
@@ -54,14 +52,16 @@
     font-weight: 800;
 }
 
-.pdoc .attr {
+.pdoc .attr.function {
     font-family: 'Source Code Pro', monospace;
     font-weight: 400;
-    font-size: 1.0rem;
+    /* font-size: 1.0rem; */
+    font-size: 90%;
     display: block;
     margin: .5rem 0 .5rem;
     padding: .4rem .4rem .4rem 1rem;
-    background-color: var(--accent);
+    /* background-color: var(--accent); */
+    background-color: #F5F5F5;
     overflow-x: auto;
 }
 .pdoc .attr:hover {
@@ -73,8 +73,11 @@
     font-weight: 600;
 }
 
-.pdoc .inherited .function a:after {
-    content: "() test";
+/* functions under API-Documentation */
+.pdoc a.function {
+    font-family: 'Source Code Pro', monospace !important;
+    font-size: 80%;
+    font-weight: 700;
 }
 
 /* .pdoc h1 { */
