--- a/custom.css
+++ b/custom.css
@@ -76,8 +76,18 @@
 /* functions under API-Documentation */
 .pdoc a.function {
     font-family: 'Source Code Pro', monospace !important;
-    font-size: 80%;
-    font-weight: 700;
+    font-size: 90%;
+    font-weight: 500;
+}
+.pdoc a.class {
+    font-family: 'Source Code Pro', monospace !important;
+    font-size: 90%;
+    font-weight: 500;
+}
+.pdoc a.variable {
+    font-family: 'Source Code Pro', monospace !important;
+    font-size: 90%;
+    font-weight: 500;
 }
 
 /* .pdoc h1 { */
