--- a/theme.css
+++ b/theme.css
@@ -5,8 +5,8 @@
 .pdoc {
     /* --text: #f7f7f7; */
     /* --muted: #9d9d9d; */
-    /* --link: #58a6ff; */
-    /* --link-hover: #3989ff; */
+    --link: purple;
+    --link-hover: #03A9F4;
     /* --code: #333; */
     --active: #F3E5F5;
 
